ReUpdate to prevent body overflow

--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,19 @@ time, mark, audio, video {
 
 * {box-sizing: border-box;}
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%
+}
+
 /* main */
 body {
   font-family: "Trebuchet MS", Verdana, sans-serif;
   color: var(--color-primary);
   background: var(--color-background);
+  /* overflow: hidden; */
 }
 
 .theme-dark {
